# Assetto-Manager

./: .gitignore  AC_Manager_Agent.spec  Access  GUIA_OPERATIVA_CLIENTE.md  INICIAR_APP.bat  README.md  TESTING_GUIDE.md  ac-manager-agent.spec  ac_manager.db  actualizar.bat  check_api.py  check_columns.py  check_db_env.py  check_db_schema.py  check_schema.py  config.json  create_admin_user.py  debug_db.py  fix_kiosk_formatting.py  fix_schema.py  fix_stations.py  fix_supabase_schema.py  generate_test_mods.py  install.bat  install_dependencies.bat  manual_usuario.md  migrate_db.py  migrate_scenarios.py  migrate_tables_v2.py  pytest.ini  seed_full_data.py  seed_kiosk_content.py  seed_leaderboard.py  seed_mods.py  server_setup.ps1  simulate_telemetry.py  start_server.bat  start_system.bat  test_comparison.py  test_fixes.py  (+5 more)
agent/: ac_telemetry.py  check_mod_system.py  config.json  hashing.py  main.py  mock_race_out.json  monitor.py  pyproject.toml  setup.bat  simulate_live_race.py  telemetry.py  vr_settings.json
backend/: .env.example  ac_manager.db-shm  ac_manager.db-wal  add_kiosk_column.py  check_db_connection.py  check_events.py  check_tracks.py  create_admin_script.py  create_test_user.py  create_tournament.py  debug_station.py  fix_db.py  fix_db_schema.py  get_kiosk_codes.py  migrate_allergies.py  migrate_championships.py  migrate_drift_score.py  migrate_driver_id.py  migrate_events.py  migrate_manage_token.py  migrate_telemetry_column.py  migrate_tv_mode.py  pyproject.toml  pytest_output.txt  requirements.txt  seed_data.py  simulate_race.py  single_fail.txt  (+5 more)
(+234 files in other folders)
