[tool.poetry]
name = "ac-manager-agent"
version = "0.1.0"
description = "Client Agent for AC Manager Simulators"
authors = ["AC Manager Team"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.5.3"
watchdog = "^3.0.0"
pywin32 = "^306"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
